--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
     width: 100%;
     font-size:30px;
     padding: 10px 100px 12px 10px;
-    background-image: url("https://raw.githubusercontent.com/Wirosablengs/Progate-JS-Bootcampt-Final-Project/main/dota2theme.jpeg");
+    background-image: url("https://raw.githubusercontent.com/Wirosablengs/Progate-JS-Bootcampt-Final-Project/main/dota2_header.png");
 }
 
 .logo {
