--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     url("6154a6c90acab96e63ecc820d9ca5626.woff") format("woff"), /* chrome、firefox */
     url("6154a6c90acab96e63ecc820d9ca5626.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
     url("6154a6c90acab96e63ecc820d9ca5626.svg#Trajan Bold") format("svg"); /* iOS 4.1- */
-  }
+  };
 
 * {
     box-sizing: border-box;
